[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/moveableRock1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MoveableRock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 1 )

[node name="MoveableRock" type="Area2D"]
z_index = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="LeftCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollision"]
position = Vector2( -9, 1 )
shape = SubResource( 3 )

[node name="TopCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="BottomCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="RightCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollision"]
position = Vector2( 9, 1 )
shape = SubResource( 3 )

[node name="MoveableRock1" type="Sprite" parent="."]
texture = ExtResource( 1 )
